# organization

./: .env.template  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  config.py
app/alembic/: env.py
app/alembic/versions/: 2024_11_07_1324-2419fe82b9b1_create_department_table.py  2024_11_07_1329-814616089421_create_employee_and_position_table.py  2024_11_07_1538-e3ab45c0cab9_create_department_table.py  2024_11_07_1539-5b409de2aa29_create_employee_and_position_table.py  2024_11_07_1614-2b6b97cde912_create_department_position_table.py
app/api/: __init__.py  department.py  employee.py  position.py
app/database/: __init__.py  base.py  crud.py  models.py
app/schemas/: department.py  employee.py  position.py
