[tool.poetry]
name = "organization"
version = "0.1.0"
description = ""
authors = ["Vladimir Litvinov <vladimirlitvinov123q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
